fix(LogFilter): fix gap; remove $ (#1241)

--- a/src/LogFilter/LogFilter.less
+++ b/src/LogFilter/LogFilter.less
@@ -1,4 +1,5 @@
-#rightsFilter {
+#rightsFilter,
+#rightsFilter > * {
 	display: flex;
 	flex-flow: row wrap;
 	align-items: center;
